# WinSock_TTNT_2025

./: .gitignore  README.md  asd.js  project_tree.txt  socket.cpp  test.py  tree_project.txt
client/: client.cpp  index.html  login.css  login.html  login.js  script.js  style.css
frontend/: index.html  script.js  style.css
server/: CMakeLists.txt  all_in_one.cpp  server.cpp
server/include/: apps.h  config.h  http_utils.h  keylogger.h  processes.h  router.h  system.h  webcam.h
server/src/: apps.cpp  config.cpp  http_utils.cpp  keylogger.cpp  processes.cpp  router.cpp  server.cpp  system.cpp  webcam.cpp
